# rainbow-robot-connect

./: README.md
RainbowRobot_ConnectTest/: .vscode_settings.json  install_ros2.sh  rb_test_manager.sh
RainbowRobot_ConnectTest/motions/: auto_rules.yaml  home_motion.yaml  home_motion_before.10.10.yaml  motion_20250925_12585_1.yaml  motion_20250925_13102_2.yaml  motion_20250925_140325.yaml  reduce_motion.py  standby_motion.yaml  발보일1.yaml  발보일2.yaml  배선트레이-1.yaml  배선트레이-2.yaml  배선트레이.yaml  배선트레이0.yaml  배선트레이1.yaml  배선트레이2.yaml  배선트레이_ver1.yaml  측판.yaml  측판1.yaml  하우징1.yaml  하우징2.yaml  하우징M.yaml  하우징M1.yaml  하우징M_0.yaml  하우징M_1022.yaml  하우징M_충돌.yaml
RainbowRobot_ConnectTest/motions/chunked_test/: motion_20250827_205053_chunk_001.yaml  motion_20250827_205053_chunk_002.yaml  motion_20250827_205053_chunk_003.yaml  (+1 more)
RainbowRobot_ConnectTest/src/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
RainbowRobot_ConnectTest/src/rb_test/: cobot.py  motion_executor.py  motion_gui_runner.py  motion_unity.py  motion_yaml_splitter.py  rb_io_bridge.py  rb_io_bridge_client.py  rb_modbus_bridge.py  sensor_gui.py  test_cobot_publisher.py  unity_tcp_bridge.py  unity_tcp_rec_gui.py
RainbowRobot_ConnectTest/src/rb_web/: COMPLETION_REPORT.md  IMPLEMENTATION_GUIDE.md  QUICK_START_IMPROVED.md  README.md  ROBOT_CONNECTION_CHECK.md  ROBOT_CONNECTION_STATUS.md  rb_web_test.py  rb_web_test_old.py  requirements.txt  run_web.sh  run_web_server.sh
RainbowRobot_ConnectTest/src/rb_web/static/: script.js  style.css
RainbowRobot_ConnectTest/src/rb_web/templates/: index.html
